# jlc2kicad-tauri

./: .gitignore  AGENTS.md  PROJECT_INIT.md  README.md  package-lock.json  package.json  vite.config.js
scripts/: bump-version.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: helpers.rs  lib.rs  main.rs  network.rs  types.rs
