[package]
name = "jlc2kicad-tauri"
version = "1.0.0"
description = "JLC2KiCad - Generate KiCad libraries from JLCPCB components"
authors = ["JLC2KiCad"]
edition = "2021"

[lib]
name = "jlc2kicad_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
once_cell = "1"
